Added in class CSS selector example

--- a/class-09/inclassexample/style.css
+++ b/class-09/inclassexample/style.css
@@ -1,42 +1,40 @@
 * {
-  font-family: sans-serif;
-}
-
-.bodyCopy {
-  line-height: 2em;
-  letter-spacing: 0.1em;
-}
-
-.subContentContainer * {
-  /* border: 1vmin solid gold; */
-}
-
-.subContent {
-  background-color: #000;
-  color: #fff;
-}
-
-.subContent + .subContent {
-  margin-top: 2vmin;
-}
-
-.subContent:hover {
-  background-color: #ff0072 !important;
-}
-
-a, a:visited{
   box-sizing: border-box;
+}
+
+body, html {
+  margin: 0px;
+  padding: 0px;
+}
+
+body {
+  font-family: sans-serif;
+  background-color: #eee;
+}
+
+.textFlex {
+  display: flex;
+  justify-content: space-around;
+}
+
+.textFlex > div {
+  border: 1px solid black;
+  padding: 16px;
+}
+
+.textFlex > div:hover {
   background-color: #ff0072;
-  padding: 2vmin;
-  text-decoration: none;
-  border-radius: 1vmin;
-  color: #fff;
 }
 
-a:hover {
-  background-color: blue;
+.smallContainer p:first-child {
+  text-decoration: underline;
 }
 
-a:active {
-  color: red;
+
+.textFlex h3 {
+  margin-bottom: 64px;
+}
+
+p + p {
+  margin-top: 32px;
 }
